--- a/force-app/main/default/classes/EMS_TM_EmployeeescalationBatch_Test.cls
+++ b/force-app/main/default/classes/EMS_TM_EmployeeescalationBatch_Test.cls
@@ -6,9 +6,12 @@ public class EMS_TM_EmployeeescalationBatch_Test {
         Date considerDate = todayval.toStartofWeek().addDays(-2);
         Date weekStart = considerDate.toStartofWeek().addDays(1);
         Date weekEnd = considerDate.toStartofWeek().addDays(7);
-        Id p = [SELECT id FROM profile WHERE name='Employee - Resource(Community)'].id;
-        user userId =[SELECT id FROM User  WHERE profileId =:p AND IsActive = true LIMIT 1];          
-        Resource_Role__c role = TestDataFactory.createResourceRole(true);
+        //Id p = [SELECT id FROM profile WHERE name='Employee - Resource(Community)'].id;
+        user userId =[SELECT id FROM User  WHERE IsActive = true LIMIT 1];  
+        
+        Resource_Role__c role = TestDataFactory.createResourceRole(false);
+         role.Name ='Sr Project Manager';
+        insert role;
         EMS_LM_Leave__c annualtype = TestDataFactory.createLeaveType('Annual Leave',true);
         EMS_LM_Leave__c loptype = TestDataFactory.createLeaveType('Loss of Pay',true);
         EMS_LM_Leave__c bretype = TestDataFactory.createLeaveType('Maternity Leave',true);
@@ -60,8 +63,16 @@ public class EMS_TM_EmployeeescalationBatch_Test {
         Database.executeBatch(batchExecute);
         test.stopTest();
          System.Debug('getEmailInvocations'+Limits.getEmailInvocations());
-        System.assertEquals(2,Limits.getEmailInvocations(), 'An email should be sent');
-                
-    }
+        System.assertEquals(3,Limits.getEmailInvocations(), 'An email should be sent');
+          }          
+    
+    
+     public static testMethod void testscheduleclass() {
+		Test.StartTest();
+		EMS_TM_EmployeeescalationBatch_sch testsche = new EMS_TM_EmployeeescalationBatch_sch();
+		String sch = '0 0 23 * * ?';
+		system.schedule('Test BatchToCalculateTheAvaiLeaves Check', sch, testsche );
+		Test.stopTest();
+	}
 
 }
