--- a/force-app/main/default/classes/MultiAssignmentController_Test.cls
+++ b/force-app/main/default/classes/MultiAssignmentController_Test.cls
@@ -1,33 +1,10 @@
-/**
-* @author SAI
-* @date 10/01/2023
-* @description  restrictAssignmentCreation Class to when Project status as a Commpleate
-*               then need restric the Assignment
-*
-*               Test code coverage provided by the following test class:
-*               - restrictAssignmentCreationTest
-*
-* CHANGE HISTORY
-* ====================================================================================================
-* DATE          NAME                    DESCRIPTION
-* N/A           N/A                     N/A
-* ====================================================================================================
-**/
 @isTest
-public class restrictAssignmentCreationTest {
-       @testSetup
-    public static void getAdminUser(){
-              user adminuser = TestDataFactory.createAdminUser(true);
-             adminuser.Manager_Access__c = true;
-             adminuser.IT_Admin_Access__c = true;
-             UPDATE adminuser;
-        
-    }
-
+public class MultiAssignmentController_Test {
+    
     public static testmethod void createTimesheet(){
-       // Id p = [SELECT id FROM profile WHERE name='Employee - Resource(Community)'].id;
-        user userId =[SELECT id FROM User  WHERE IsActive = true LIMIT 1];          
+        user loginedUser =[SELECT id from User  where IsActive = true LIMIT 1];
         Resource_Role__c role = TestDataFactory.createResourceRole(true);
+         Office_Location__c officlocRec =TestDataFactory.createOfficeLocation('Hhyderabad',true);
         EMS_LM_Leave__c annualtype = TestDataFactory.createLeaveType('Annual Leave',true);
         EMS_LM_Leave__c loptype = TestDataFactory.createLeaveType('Loss of Pay',true);
         EMS_LM_Leave__c bretype = TestDataFactory.createLeaveType('Maternity Leave',true);
@@ -43,33 +20,41 @@ public class restrictAssignmentCreationTest {
         con.EMS_EM_CA_State__c ='AP';
         con.Timesheet_NoNeed__c =false;
         con.Resource_Role__c = role.Id;
-        con.EMS_TM_User__c =userId.Id;
+        con.EMS_TM_User__c =loginedUser.Id;
+        con.Work_Location__c =officlocRec.Id;
         INSERT con;
-        
+        System.debug('conData'+con);
         EMS_TM_Project__c projectRec = new EMS_TM_Project__c();
         projectRec.EMS_TM_StartDate__c = System.today();
         projectRec.EMS_TM_EndDate__c = System.today()+10;
-        projectRec.EMS_TM_Status__c = 'completed';
+        projectRec.EMS_TM_Status__c = 'ongoing';
         projectRec.Name = 'project1';
         projectRec.Project_Manager__c = con.Id;
         projectRec.Type_Of_Project__c ='Client Projects';
         INSERT projectRec;        
+        System.debug('ProjectREC'+projectRec);       
         System.debug('ProjectREC'+projectRec);
-        
-        test.startTest();
         EMS_TM_Assignment__c assignmentRec = new EMS_TM_Assignment__c();
         assignmentRec.EMS_TM_EmployeeName__c = con.Id;
         assignmentRec.EMS_TM_ProjectName_Asgn__c = projectRec.Id;
         assignmentRec.EMS_TM_StartDate_Asgn__c = system.today();
         assignmentRec.EMS_TM_Billable__c = true;
-        try{
-        INSERT assignmentRec; 
-        }catch(Exception e){
-            
-        }
+        INSERT assignmentRec;
+        List<EMS_TM_Assignment__c> assignmentList = new List<EMS_TM_Assignment__c>();
+        EMS_TM_Assignment__c assignmentRec1 = new EMS_TM_Assignment__c();
+        assignmentRec1.EMS_TM_EmployeeName__c = con.Id;
+        assignmentRec1.EMS_TM_ProjectName_Asgn__c = projectRec.Id;
+        assignmentRec1.EMS_TM_StartDate_Asgn__c = system.today();
+        assignmentRec1.EMS_TM_Billable__c = true;
+        assignmentList.add(assignmentRec1);
+        String str = JSON.serialize(assignmentList);
+        test.startTest();
+        MultiAssignmentController.getRelatedAssignments(projectRec.Id);
+        MultiAssignmentController.deleteAssignmentHandler(assignmentRec.Id, projectRec.Id);
+        MultiAssignmentController.saveAssignmentData(str, projectRec.Id);
         test.stopTest();
-        
-        List<EMS_TM_Assignment__c> assignmentList =[SELECT Id FROM EMS_TM_Assignment__c LIMIT 1];
-        System.assertEquals(0,assignmentList.size());
     }
+    
+    
+
 }
