--- a/force-app/main/default/classes/AssignmentTileControllerTest.cls
+++ b/force-app/main/default/classes/AssignmentTileControllerTest.cls
@@ -1,16 +1,31 @@
 @isTest
 public class AssignmentTileControllerTest {
     public static testmethod void checkTheLoggedInUserAssignmentDetails(){
-         Resource_Role__c role = TestDataFactory.createResourceRole(true);
-         TestDataFactory.createLeaveType(true);
-         EMS_LM_Leave__c loptype = TestDataFactory.createLeaveType('Loss of Pay',true);
-         Account acc = TestDataFactory.createAccount(true);
-		 Contact con=  TestDataFactory.createResourceContact(acc.id, false);
-         con.EMS_RM_Employee_Id__c = 'CP10234';
-         con.Resource_Role__c = role.Id;
-         insert con;
-         User u = Testdatafactory.createCommunityUserWithAccAndContact(acc.id,con.Id,true);
-         EMS_TM_Project__c projectRec = new EMS_TM_Project__c();
+ 
+        user adminuser = TestDataFactory.createAdminUser(true);
+        Resource_Role__c role;
+        Account acc;
+        Contact con;
+        EMS_TM_Project__c projectRec;
+        EMS_LM_Leave__c annualtype;
+        system.runAs(adminuser){
+            
+            role = TestDataFactory.createResourceRole('Software Engineer',true);
+            annualtype = TestDataFactory.createLeaveType('Annual Leave',true);
+            EMS_LM_Leave__c loptype = TestDataFactory.createLeaveType('Loss of Pay',true);
+            EMS_LM_Leave__c bretype = TestDataFactory.createLeaveType('Maternity Leave',true);
+            EMS_LM_Leave__c compofftype = TestDataFactory.createLeaveType('Compensatory Off',true);
+            EMS_LM_Leave__c wfhtype = TestDataFactory.createLeaveType('Work From Home',true);
+            
+            
+            acc = TestDataFactory.createAccount(true);
+            con=TestDataFactory.createResourceContact(acc.id, false);
+            con.EMS_RM_Employee_Id__c = 'CP10234';
+            con.Resource_Role__c = role.Id;
+            con.EMS_LM_No_Of_Maternity_Leaves_Credit__c = 0;
+            con.EMS_LM_No_Of_Leaves_Credit__c = 10;
+            insert con;
+          projectRec = new EMS_TM_Project__c();
         projectRec.EMS_TM_StartDate__c = System.today();
         projectRec.EMS_TM_EndDate__c = System.today()+10;
         projectRec.EMS_TM_Status__c = 'ongoing';
@@ -18,9 +33,14 @@ public class AssignmentTileControllerTest {
         projectRec.Project_Manager__c = con.Id;
         projectRec.Type_Of_Project__c ='Client Projects';
         INSERT projectRec;        
-       
-        
-         Test.startTest();
+
+            System.debug('con'+ con);
+        }
+        User u;
+        Test.startTest();
+        system.runAs(adminuser){
+            u = Testdatafactory.createCommunityUserWithAccAndContact(acc.id,con.Id,true);
+        }
           
           system.runAs(u){
              EMS_TM_Assignment__c assignmentRec = new EMS_TM_Assignment__c();
