--- a/force-app/main/default/classes/LeaveRequestApexControllerTest.cls
+++ b/force-app/main/default/classes/LeaveRequestApexControllerTest.cls
@@ -1,79 +1,58 @@
-/**
-* @author Pavan 
-* @date 11/01/2023
-* @description  Method used to display leave request data based on the loggedIn approver user
-*            
-*
-*               
-* CHANGE HISTORY
-* ====================================================================================================
-* DATE          NAME                    DESCRIPTION
-* N/A           N/A                     N/A
-* ====================================================================================================
-**/
-
 @isTest
 public class LeaveRequestApexControllerTest {
-    @testSetup
-    static void testDataSetup(){
-        //Contact Data
-        List<Contact> testConList = new List<Contact>();
-        for (Integer i=0; i < 3; i++){
-            contact testConData = new Contact(LastName = 'Test con' +i,
-                                              Location__c = 'India',
-                                              EMS_Phone_Number__c = '123647890',
-                                              Email = 'test@gmail.com');
-            testConList.add(testConData);
+    
+    static testMethod void testGetLeaveReqData(){
+        user adminuser = TestDataFactory.createAdminUser(true);
+        Resource_Role__c role;
+        Resource_Role__c role1;
+        Account acc;
+        Contact con;
+        Contact conRRR;
+        EMS_LM_Leave__c annualtype;
+        Resource_Resource_Relationship__c rrr;
+        system.runAs(adminuser){
+            
+            role = TestDataFactory.createResourceRole('Software Engineer',true);
+            role1 = TestDataFactory.createResourceRole('tech Engineer',true);
+            annualtype = TestDataFactory.createLeaveType('Annual Leave',true);
+            EMS_LM_Leave__c loptype = TestDataFactory.createLeaveType('Loss of Pay',true);
+            EMS_LM_Leave__c bretype = TestDataFactory.createLeaveType('Maternity Leave',true);
+            EMS_LM_Leave__c compofftype = TestDataFactory.createLeaveType('Compensatory Off',true);
+            EMS_LM_Leave__c wfhtype = TestDataFactory.createLeaveType('Work From Home',true);
+            
+            acc = TestDataFactory.createAccount(true);
+            con=TestDataFactory.createResourceContact(acc.id, false);
+            con.EMS_RM_Employee_Id__c = 'CP10234';
+            con.Resource_Role__c = role.Id;
+            con.EMS_LM_No_Of_Maternity_Leaves_Credit__c = 0;
+            con.EMS_LM_No_Of_Leaves_Credit__c = 10;
+            insert con;
+            conRRR=TestDataFactory.createResourceContactForRRR(acc.id, false);
+            conRRR.EMS_RM_Employee_Id__c = 'CP10235';
+            conRRR.Resource_Role__c = role1.Id;
+            conRRR.EMS_LM_No_Of_Maternity_Leaves_Credit__c = 0;
+            conRRR.EMS_LM_No_Of_Leaves_Credit__c = 10;
+            insert conRRR;
+            rrr = TestDataFactory.createRRR(con.Id, true, conRRR.Id);
         }
-        insert testConList;
-        //Leave Request Data
-        List<EMS_LM_Leave_History__c> testLeaveRequestPendingList = new List<EMS_LM_Leave_History__c>();
-        List<EMS_LM_Leave_History__c> testLeaveRequestApprover2List = new List<EMS_LM_Leave_History__c>();
-        List<EMS_LM_Leave_History__c> testLeaveRequestApprover3List = new List<EMS_LM_Leave_History__c>();
-        for (Integer i = 0; i < 2; i++) {
-            EMS_LM_Leave_History__c testLeaveRequest = new EMS_LM_Leave_History__c(EMS_LM_Contact__c = testConList[0].Id, 
-                                                                                   EMS_LM_Reason__c = 'Test Reason'+i, 
-                                                                                   EMS_LM_Leave_Start_Date__c = Date.today(), 
-                                                                                   EMS_LM_Leave_End_Date__c = Date.today()+1, 
-                                                                                   EMS_LM_Leave_Duration__c = 1,
-                                                                                   EMS_LM_Approver__c = UserInfo.getUserId(), 
-                                                                                   EMS_LM_2nd_Approver__c = UserInfo.getUserId(),
-                                                                                   Approver_3__c = UserInfo.getUserId(),
-                                                                                   EMS_LM_Status__c = 'Pending');
-            testLeaveRequestPendingList.add(testLeaveRequest);
+        User u1;
+        User u2;
+        Test.startTest();
+        system.runAs(adminuser){
+            u1 = Testdatafactory.createCommunityUserWithAccAndContact(acc.id,con.Id,true);
+            u2 = Testdatafactory.createCommunityUser2WithAccAndContact(acc.id,conRRR.Id,true);
         }
-        for (Integer i = 0; i < 2; i++) {
-            EMS_LM_Leave_History__c testLeaveRequest = new EMS_LM_Leave_History__c(EMS_LM_Contact__c = testConList[1].Id, 
-                                                                                   EMS_LM_Reason__c = 'Test Reason'+i, 
-                                                                                   EMS_LM_Leave_Start_Date__c = Date.today(), 
-                                                                                   EMS_LM_Leave_End_Date__c = Date.today()+3, 
-                                                                                   EMS_LM_Leave_Duration__c = 3,
-                                                                                   EMS_LM_Approver__c = UserInfo.getUserId(), 
-                                                                                   EMS_LM_2nd_Approver__c = UserInfo.getUserId(),
-                                                                                   Approver_3__c = UserInfo.getUserId(),
-                                                                                   EMS_LM_Status__c = 'Waiting For Approver 2');
-            testLeaveRequestApprover2List.add(testLeaveRequest);
+        system.runAs(u2){
+            List<Id> leaveReqTabIdsList = new list<Id>();
+            List<EMS_LM_Leave_History__c> requests = new List<EMS_LM_Leave_History__c>();
+            requests.add(TestDataFactory.createLeaveRequest(con.id, system.today(), system.today().adddays(1), annualtype.id, false, 'Pending'));
+            requests.add(TestDataFactory.createLeaveRequest(con.id, system.today().adddays(6), system.today().adddays(7), annualtype.id, false, 'Approver 1 Pending'));
+            requests.add(TestDataFactory.createLeaveRequest(con.id, system.today().adddays(8), system.today().adddays(9), annualtype.id, false, 'Approver 2 Pending'));
+            insert requests;
+            for(EMS_LM_Leave_History__c leaveIds : requests) {
+                leaveReqTabIdsList.add(leaveIds.Id);
+            }
+            LeaveRequestApexController.LeaveRequestStatus result = LeaveRequestApexController.getLeaveReqData();
         }
-        for (Integer i = 0; i < 2; i++) {
-            EMS_LM_Leave_History__c testLeaveRequest = new EMS_LM_Leave_History__c(EMS_LM_Contact__c = testConList[1].Id, 
-                                                                                   EMS_LM_Reason__c = 'Test Reason'+i, 
-                                                                                   EMS_LM_Leave_Start_Date__c = Date.today(), 
-                                                                                   EMS_LM_Leave_End_Date__c = Date.today()+3, 
-                                                                                   EMS_LM_Leave_Duration__c = 3,
-                                                                                   EMS_LM_Approver__c = UserInfo.getUserId(), 
-                                                                                   EMS_LM_2nd_Approver__c = UserInfo.getUserId(),
-                                                                                   Approver_3__c = UserInfo.getUserId(),
-                                                                                   EMS_LM_Status__c = 'Waiting For Approver 3');
-            testLeaveRequestApprover3List.add(testLeaveRequest);
-        }
-        insert testLeaveRequestPendingList;
-        insert testLeaveRequestApprover2List;
-        insert testLeaveRequestApprover3List;
-    }
-    static testMethod void testGetLeaveReqData() {
-        LeaveRequestApexController.LeaveRequestStatus result = LeaveRequestApexController.getLeaveReqData();
-        System.assertEquals(result.pendingList.size(), 2, 'Failed in pendingList LeaveRequestApexController');
-        System.assertEquals(result.approver2List.size(), 2, 'Failed in approver2List LeaveRequestApexController');
-        System.assertEquals(result.approver3List.size(), 2 , 'Failed in approver3List LeaveRequestApexController');
     }
 }
