--- a/force-app/main/default/classes/timesheetRecordStatusApproveTest.cls
+++ b/force-app/main/default/classes/timesheetRecordStatusApproveTest.cls
@@ -58,8 +58,8 @@ public class timesheetRecordStatusApproveTest {
         EMS_TM_Timesheet_Record__c lineitem = new EMS_TM_Timesheet_Record__c();
         lineitem.EMS_Timesheet__c = timesheetRec.Id;
         lineitem.OwnerId = timesheetRec.User__c;
-        lineitem.Assignment__c = assignmentRec.Id;
-        lineitem.EMS_TM_Project__c = assignmentRec.EMS_TM_ProjectName_Asgn__c;
+        //lineitem.Assignment__c = assignmentRec.Id;
+        lineitem.EMS_TM_Project__c = projectRec.Id;
         lineitem.EMS_TM_Mon__c = 0;
         lineitem.EMS_TM_Wed__c = 0;
         lineitem.EMS_TM_Tue__c = 0;
